--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=0e53a2e3410c9d04b7913db689e2e178
+APP_SECRET=0e53a2e3410c9d04b7913db689e2e178DAPPA012023
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -25,7 +25,8 @@ APP_SECRET=0e53a2e3410c9d04b7913db689e2e178
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL="mysql://<usuaio_bdd>:<contraseña_bdd>@localhost:3306/<bdd>"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
