--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ APP_SECRET=0e53a2e3410c9d04b7913db689e2e178DAPPA012023
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
-DATABASE_URL="mysql://<usuaio_bdd>:<contraseña_bdd>@localhost:3306/<bdd>"
+DATABASE_URL="mysql://foro:'Sistemas%2F2023'@localhost:3306/foro?serverVersion=15.1&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
