Agregando el control de acceso

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -27,6 +27,7 @@ security:
                 # "app_login" is the name of the route created previously
                 login_path: app_login
                 check_path: app_login
+                enable_csrf: true
 
             logout:
                 path: app_logout 
@@ -36,6 +37,10 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+        - { path: '^/$', role: PUBLIC_ACCESS }
+        - { path: '^/[0-9]+/show', role: PUBLIC_ACCESS }
+        - { path: '^/app/login', role: PUBLIC_ACCESS }
+        - { path: '^/', role: ROLE_USER }
 
 when@test:
     security:
